@@ -48,6 +48,7 @@ namespace Orthanc
       T_ASC_NetworkRole role,
       const std::string& ownPrivateKeyPath,        // This is the first argument of "+tls" option from DCMTK command-line tools
       const std::string& ownCertificatePath,       // This is the second argument of "+tls" option
-      const std::string& trustedCertificatesPath); // This is the "--add-cert-file" ("+cf") option
+      const std::string& trustedCertificatesPath,  // This is the "--add-cert-file" ("+cf") option
+      bool requireRemoteCertificate);              // "true" means "--require-peer-cert", "false" means "--verify-peer-cert"
   }
 }
